# uf3

./: .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  readme.rst  requirements.txt  setup.py
.github/workflows/: publish_pypi_package.yml  python-publish.yml  tests.yml
UltraFastFeaturization/: README.rst  UltraFastFeaturize_demo.ipynb
UltraFastFeaturization/cmake/: CMakeLists.txt
UltraFastFeaturization/src/: UltraFastFeaturize.cpp  UltraFastFeaturize.h  UltraFastNeighs.cpp  UltraFastNeighs.h  bspline_config_ff.cpp  bspline_config_ff.h  main.cpp  uf3_bspline_basis2.h  uf3_bspline_basis3.h
docs/: api.rst  conf.py  index.rst  options.rst  requirements.txt
docs/_autosummary/: uf3.rst
examples/: linearqmml_binning.html  linearqmml_regression.html  linearqmml_workflow.ipynb
examples/Ne-Xe/: Ne-Xe_learning.ipynb
examples/NeXe_lammps/: NeXe_learning.ipynb  README.md  model_pair.json  pair_potential_demo.html  pair_potential_demo.ipynb
examples/W/: README.md  W_learning.ipynb  W_properties.ipynb  training_idx.txt
examples/garun/: README.md  example.py  settings.yaml
examples/modules/: 00_dependencies.ipynb  01_composition.ipynb  04_bspline.ipynb  README.md
examples/tungsten_extxyz/: README.md  example_extxyz.ipynb  model_2.json  model_2and3.json  model_pair.json  model_uf23.json  model_vis.json  pair_potential_WIP.ipynb  pair_potential_demo.html  pair_potential_demo.ipynb  radial_cutoff_hyperparameter_optimization_example.ipynb  sample_training_id_radial_cutoff_opt.txt  uf23_potential_demo.html  uf23_potential_demo.ipynb
examples/vasp_project/: README.md  example.py  featurize.py  learning.py  postprocess.py  preprocess.py  settings.yaml
lammps_plugin/: README.rst
lammps_plugin/ML-UF3/: pair_uf3.cpp  pair_uf3.h  pair_uf3_kokkos.cpp  pair_uf3_kokkos.h  uf3_bspline_basis2.cpp  uf3_bspline_basis2.h  uf3_bspline_basis3.cpp  uf3_bspline_basis3.h  uf3_pair_bspline.cpp  uf3_pair_bspline.h  uf3_triplet_bspline.cpp  uf3_triplet_bspline.h
lammps_plugin/ML-UF3_KOKKOS/: pair_uf3_kokkos.cpp  pair_uf3_kokkos.h
lammps_plugin/documentation_lammps_format/: pair_uf3.rst
lammps_plugin/scripts/: README.rst  generate_uf3_lammps_pots.py
linearqmml/: plotting.py  smearing.py  utils.py
scripts/: options.rst
src/: parsing.py  plotting.py  regression.py  smearing.c  smearing.html  smearing.pyx
supplement/: README.md  W_properties-competing.ipynb  tungsten_properties.html  tungsten_properties.ipynb
tests/: test_angles.py  test_basis.py  test_bspline_mag.py  test_bsplines.py  test_calculator.py  test_chemistry.py  test_composition.py  test_composition_mag.py  test_config.py  test_distances.py  test_distances_mag.py  test_geometry.py  test_io.py  test_knots.py  test_least_squares.py  test_optimize.py  test_regularize.py  test_representation.py  test_subsample.py  test_twobody.py
uf3/: default_config.yaml  default_options.yaml
uf3/data/: io.py  (+3 more)
(+113 files in other folders)
